# template-rust

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  README.md  bacon.toml
server/: Cargo.toml  README.md  bacon.toml
server/src/: lib.rs
src/: lib.rs
