[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2024"
authors = ["Manuel Hutter (https://github.com/mhutter)"]
license = "MIT"
repository = "https://github.com/mhutter/{{project-name}}"

[dependencies]

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[lints.rust]
unsafe_code = "forbid"
